Sketches page - 98% there

--- a/sketches.html
+++ b/sketches.html
@@ -42,10 +42,16 @@
 
 <div class="filter" id="btn-container">
   <button class="btn active-b" onclick="filterSelection('all')">show all</button>
-  <!—- Make up your own filter categories, replace dogs, cats, animals, fruits and colors with your own
-  categories -->
   <button class="btn" onclick="filterSelection('color')">color</button>
   <button class="btn" onclick="filterSelection('b&w')">b&w</button>
+</div>
+
+<section class="contents">
+<div class="overview">
+  <p>Here is my album of sketches that I've worked on over the years. Some for course assignments and others simply for fun.
+    I'll be updating this page and adding more each time I get inspired — which will be quite often now that I have a bit more
+    free time on my hands. In the meantime, feel free to browse through!
+  </p>
 </div>
 
 <section class="filter-section">
@@ -78,6 +84,7 @@
       <img class="merch-img" src="./assets/images/sketches/popups-BG-color.png" />
     </div>
   </div>
+</section>
 </section>
 
 <section>
