Pop-ups page mods
Framework added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a class="link topnav__link topnav__name disableClick" id="name" style="float:left;">Shandira Ferguson</a>
     <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank" style="font-size:23px;">&#xf0e1;</a>
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;<span class="email-text">shandira.ferguson@gmail.com</span></a>
-    <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+    <a class="link topnav__link" href="popups.html">pop-ups</a>
     <a class="link topnav__link" href="sketches.html">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
     <a class="link topnav__link" href="projects.html">projects</a>
@@ -53,7 +53,7 @@
     color: black;"><span class="fa copyright">&#xf1f9;</span> 2020 Shandira Ferguson <br> <span style="font-size:10px;
     font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
     <div class="center-block">
-      <a class="link footer__link" href="#pop-ups">pop-ups</a>
+      <a class="link footer__link" href="popups.html">pop-ups</a>
       <a class="link footer__link" href="sketches.html">sketches</a>
       <a class="link footer__link" href="process.html">process</a>
       <a class="link footer__link" href="projects.html">projects</a>
