--- a/sketches.html
+++ b/sketches.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Final Project for HTML5/CSS3 Course">
   <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
+  <title>Shandira Ferguson | UI/UX Designer & Software Engineer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css"/>
   <script src="./assets/javascripts/responsive-nav-bar.js"></script>
@@ -26,10 +26,10 @@
   style="font-size:23px;">&#xf0e1;</a>
   <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
     <span class="email-text">shandira.ferguson@gmail.com</span></a>
-    <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+    <a class="link topnav__link" href="popups.html">pop-ups</a>
     <a class="link topnav__link active-btn" href="sketches.html">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
-    <a class="link topnav__link" href="#projects">projects</a>
+    <a class="link topnav__link" href="projects.html">projects</a>
     <a class="link topnav__link" href="about.html">about</a>
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
@@ -41,14 +41,14 @@
   </section>
 
 <div class="filter" id="btn-container">
-  <button class="btn active-b" onclick="filterSelection('all')">show all</button>
+  <button class="btn active-b" onclick="filterSelection('all')">all</button>
   <button class="btn" onclick="filterSelection('color')">color</button>
   <button class="btn" onclick="filterSelection('b&w')">b&w</button>
 </div>
 
 <section class="contents">
 <div class="overview">
-  <p>Here is my album of sketches that I've worked on over the years. Some for course assignments and others simply for fun.
+  <p>Welcome to my album of sketches that I've worked on over the years. Some for course assignments and others simply for fun.
     I'll be updating this page and adding more each time I get inspired — which will be quite often now that I have a bit more
     free time on my hands. In the meantime, feel free to browse through!
   </p>
@@ -94,7 +94,7 @@
       color: black;"><span class="fa copyright">&#xf1f9;</span> 2020 Shandira Ferguson <br> <span style="font-size:10px;
       font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
       <div class="center-block">
-        <a class="link footer__link" href="#pop-ups">pop-ups</a>
+        <a class="link footer__link" href="popups.html">pop-ups</a>
         <a class="link footer__link active-btn" href="sketches.html">sketches</a>
         <a class="link footer__link" href="process.html">process</a>
         <a class="link footer__link" href="projects.html">projects</a>
