Popups page styling
Table changes

--- a/popups.html
+++ b/popups.html
@@ -13,58 +13,109 @@
   <script src="./assets/javascripts/jquery.min.js"></script>
   <script src="./assets/javascripts/lightbox.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/sketches-filter.css" />
-  <script src="./assets/javascripts/sketches-filter.js"></script>
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/popups.css" />
 </head>
 
 <body>
-<div class="topnav" id="myTopNav">
-  <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/sf-logo@2x.png"></a>
-  <div class="vertical"></div>
-  <a class="link topnav__link topnav__name disableClick" id="name" style="float:left" >Shandira Ferguson</a>
-  <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank"
-  style="font-size:23px;">&#xf0e1;</a>
-  <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
-    <span class="email-text">shandira.ferguson@gmail.com</span></a>
-    <a class="link topnav__link active-btn" href="popups.html">pop-ups</a>
-    <a class="link topnav__link" href="sketches.html">sketches</a>
-    <a class="link topnav__link" href="process.html">process</a>
-    <a class="link topnav__link" href="projects.html">projects</a>
-    <a class="link topnav__link" href="about.html">about</a>
-    <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
-  </div>
-
-  <section>
-    <div class="col-xs-12" style="box-shadow:none">
-      <img class="headline-img" src="./assets/images/popups/popups-headline.png"/>
+  <div class="topnav" id="myTopNav">
+    <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/sf-logo@2x.png"></a>
+    <div class="vertical"></div>
+    <a class="link topnav__link topnav__name disableClick" id="name" style="float:left" >Shandira Ferguson</a>
+    <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank"
+    style="font-size:23px;">&#xf0e1;</a>
+    <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
+      <span class="email-text">shandira.ferguson@gmail.com</span></a>
+      <a class="link topnav__link active-btn" href="popups.html">pop-ups</a>
+      <a class="link topnav__link" href="sketches.html">sketches</a>
+      <a class="link topnav__link" href="process.html">process</a>
+      <a class="link topnav__link" href="projects.html">projects</a>
+      <a class="link topnav__link" href="about.html">about</a>
+      <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
     </div>
-  </section>
 
+    <section>
+      <div class="col-xs-12" style="box-shadow:none">
+        <img class="headline-img" src="./assets/images/popups/popups-headline.png"/>
+      </div>
+    </section>
 
-
-
-
-
-
-
-
-
-  <section>
-    <div class="col-xs-12" style="padding: 0%">
-      <footer class="footer">
-        <a class="link footer__link disableClick" style="float:left;
-        color: black;"><span class="fa copyright">&#xf1f9;</span> 2020 Shandira Ferguson <br> <span style="font-size:10px;
-        font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
-        <div class="center-block">
-          <a class="link footer__link active-btn" href="popups.html">pop-ups</a>
-          <a class="link footer__link" href="sketches.html">sketches</a>
-          <a class="link footer__link" href="process.html">process</a>
-          <a class="link footer__link" href="projects.html">projects</a>
-          <a class="link footer__link" href="about.html">about</a>
-        </div>
-      </footer>
+    <div class="overview-popups">
+      <p>Welcome to my album of sketches that I've worked on over the years. Some for course assignments and others simply for fun.
+        I'll be updating this page and adding more each time I get inspired — which will be quite often now that I have a bit more
+        free time on my hands. In the meantime, feel free to browse through!
+      </p>
     </div>
-  </section>
+
+    <section class="contents">
+      <table class="table-contents">
+        <tr>
+          <th>venue</th>
+          <th>location</th>
+          <th>date</th>
+          <th>time</th>
+          <th>ticket purchase location</th>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Nassau, Bahamas</td>
+          <td>8/23/2020</td>
+          <td>9am - 12pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Nassau, Bahamas</td>
+          <td>8/23/2020</td>
+          <td>9am - 12pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Nassau, Bahamas</td>
+          <td>8/23/2020</td>
+          <td>9am - 12pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Nassau, Bahamas</td>
+          <td>8/23/2020</td>
+          <td>9am - 12pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Nassau, Bahamas</td>
+          <td>8/23/2020</td>
+          <td>9am - 12pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Nassau, Bahamas</td>
+          <td>8/23/2020</td>
+          <td>9am - 12pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+      </table>
+    </section>
+
+    <section>
+      <div class="col-xs-12" style="padding: 0%">
+        <footer class="footer">
+          <a class="link footer__link disableClick" style="float:left;
+          color: black;"><span class="fa copyright">&#xf1f9;</span> 2020 Shandira Ferguson <br> <span style="font-size:10px;
+          font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
+          <div class="center-block">
+            <a class="link footer__link active-btn" href="popups.html">pop-ups</a>
+            <a class="link footer__link" href="sketches.html">sketches</a>
+            <a class="link footer__link" href="process.html">process</a>
+            <a class="link footer__link" href="projects.html">projects</a>
+            <a class="link footer__link" href="about.html">about</a>
+          </div>
+        </footer>
+      </div>
+    </section>
 
   </body>
   <script>filterSelection("all");</script>
