More popups mods
Table changes

--- a/popups.html
+++ b/popups.html
@@ -53,7 +53,7 @@
           <th>location</th>
           <th>date</th>
           <th>time</th>
-          <th>ticket purchase location</th>
+          <th>ticket location</th>
         </tr>
         <tr>
           <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
@@ -64,37 +64,65 @@
         </tr>
         <tr>
           <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
-          <td>Nassau, Bahamas</td>
-          <td>8/23/2020</td>
+          <td>Abaco, Bahamas</td>
+          <td>10/31/2020</td>
+          <td>8am - 11pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Exuma, Bahamas</td>
+          <td>12/6/2020</td>
+          <td>3pm - 5pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Los Angeles, CA</td>
+          <td>12/14/2020</td>
+          <td>1pm - 3pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>San Francisco, CA</td>
+          <td>1/1/2020</td>
+          <td>9am - 12pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Los Angeles, CA</td>
+          <td>1/15/2021</td>
+          <td>3pm - 5pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Hollywood, CA</td>
+          <td>4/27/2021</td>
+          <td>8pm - 10pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Exuma, Bahamas</td>
+          <td>4/29/2021</td>
+          <td>1pm - 3pm</td>
+          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td>Abaco, Bahamas</td>
+          <td>7/5/2021</td>
           <td>9am - 12pm</td>
           <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
         </tr>
         <tr>
           <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
           <td>Nassau, Bahamas</td>
-          <td>8/23/2020</td>
-          <td>9am - 12pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
-        </tr>
-        <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
-          <td>Nassau, Bahamas</td>
-          <td>8/23/2020</td>
-          <td>9am - 12pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
-        </tr>
-        <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
-          <td>Nassau, Bahamas</td>
-          <td>8/23/2020</td>
-          <td>9am - 12pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
-        </tr>
-        <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
-          <td>Nassau, Bahamas</td>
-          <td>8/23/2020</td>
-          <td>9am - 12pm</td>
+          <td>8/23/2021</td>
+          <td>3pm - 5pm</td>
           <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
         </tr>
       </table>
