Popups page complete
...for now

--- a/popups.html
+++ b/popups.html
@@ -63,60 +63,60 @@
           <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
         </tr>
         <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td><a href="https://www.nippersbar.com/" target="_blank">Nipper's Bar & Grill</a></td>
           <td>Abaco, Bahamas</td>
           <td>10/31/2020</td>
           <td>8am - 11pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+          <td>SOLD OUT</td>
         </tr>
         <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td><a href="https://www.chatnchill.com/" target="_blank">Chat 'n Chill'</a></td>
           <td>Exuma, Bahamas</td>
           <td>12/6/2020</td>
           <td>3pm - 5pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+          <td>SOLD OUT</td>
         </tr>
         <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td><a href="https://cinema.usc.edu/" target="_blank">USC SCA Courtyard</a></td>
           <td>Los Angeles, CA</td>
           <td>12/14/2020</td>
           <td>1pm - 3pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+          <td><a href="https://trojanevents.usc.edu/tcc/" target="_blank">Tutor Campus Center</a></td>
         </tr>
         <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td><a href="http://www.venue550.com/" target="_blank">venue550</a></td>
           <td>San Francisco, CA</td>
           <td>1/1/2020</td>
           <td>9am - 12pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+          <td><a href="http://www.venue550.com/" target="_blank">purchase online</a></td>
         </tr>
         <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td><a href="https://viterbischool.usc.edu/" target="_blank">USC Viterbi Courtyard</a></td>
           <td>Los Angeles, CA</td>
           <td>1/15/2021</td>
           <td>3pm - 5pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+          <td><a href="https://trojanevents.usc.edu/tcc/" target="_blank">Tutor Campus Center</a></td>
         </tr>
         <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td><a href="https://www.sgloft.com/" target="_blank">The Secret Garden Loft</a></td>
           <td>Hollywood, CA</td>
           <td>4/27/2021</td>
           <td>8pm - 10pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+          <td><a href="https://www.sgloft.com/" target="_blank">SGLoft- Front Desk</a></td>
         </tr>
         <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td><a href="https://www.chatnchill.com/" target="_blank">Chat 'n Chill'</a></td>
           <td>Exuma, Bahamas</td>
           <td>4/29/2021</td>
           <td>1pm - 3pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+          <td>SOLD  OUT</td>
         </tr>
         <tr>
-          <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
+          <td><a href="https://grabbersatsunset.com/" target="_blank">Grabbers Bar & Grill</a></td>
           <td>Abaco, Bahamas</td>
           <td>7/5/2021</td>
           <td>9am - 12pm</td>
-          <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
+          <td><a href="https://grabbersatsunset.com/" target="_blank">Grabbers website</a></td>
         </tr>
         <tr>
           <td><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></td>
