Tonight's final push - sat.5/2/2020

--- a/popups.html
+++ b/popups.html
@@ -40,9 +40,9 @@
     </section>
 
     <div class="overview-popups">
-      <p>Welcome to my album of sketches that I've worked on over the years. Some for course assignments and others simply for fun.
-        I'll be updating this page and adding more each time I get inspired — which will be quite often now that I have a bit more
-        free time on my hands. In the meantime, feel free to browse through!
+      <p>It's pop-up time! I've always wanted to meet every last one of you guys that's been rockin' with me from the beginning. It's
+          definitely been a long journey! If you're new to this space, I welcome you! This table may change and new venues may be
+          added but this is our start guys! Secure that spot! Can't wait to see you all there!
       </p>
     </div>
 
@@ -67,14 +67,14 @@
           <td>Abaco, Bahamas</td>
           <td>10/31/2020</td>
           <td>8am - 11pm</td>
-          <td>SOLD OUT</td>
+          <td style="color:#D8D8D8">Registration closed</td>
         </tr>
         <tr>
           <td><a href="https://www.chatnchill.com/" target="_blank">Chat 'n Chill'</a></td>
           <td>Exuma, Bahamas</td>
           <td>12/6/2020</td>
           <td>3pm - 5pm</td>
-          <td>SOLD OUT</td>
+          <td style="color:#D8D8D8">Registration closed</td>
         </tr>
         <tr>
           <td><a href="https://cinema.usc.edu/" target="_blank">USC SCA Courtyard</a></td>
@@ -84,11 +84,11 @@
           <td><a href="https://trojanevents.usc.edu/tcc/" target="_blank">Tutor Campus Center</a></td>
         </tr>
         <tr>
-          <td><a href="http://www.venue550.com/" target="_blank">venue550</a></td>
+          <td><a href="http://www.venue550.com/" target="_blank">Venue550</a></td>
           <td>San Francisco, CA</td>
           <td>1/1/2020</td>
           <td>9am - 12pm</td>
-          <td><a href="http://www.venue550.com/" target="_blank">purchase online</a></td>
+          <td><a href="http://www.venue550.com/" target="_blank">Venue550 website</a></td>
         </tr>
         <tr>
           <td><a href="https://viterbischool.usc.edu/" target="_blank">USC Viterbi Courtyard</a></td>
@@ -109,7 +109,7 @@
           <td>Exuma, Bahamas</td>
           <td>4/29/2021</td>
           <td>1pm - 3pm</td>
-          <td>SOLD  OUT</td>
+          <td style="color:#D8D8D8">Registration closed</td>
         </tr>
         <tr>
           <td><a href="https://grabbersatsunset.com/" target="_blank">Grabbers Bar & Grill</a></td>
