--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 
     <section class="vid-section">
       <!-- <h2 class="text__h1 proj-subtitles" style="padding-top:32%;">Final products</h2> -->
-      <div class="media-list" style= "padding:5%; box-shadow:none">
+      <div class="media-list" style= "box-shadow:none">
         <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
         frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
@@ -55,9 +55,18 @@
       </div>
     </section>
 
+    <div class="anim-text-block" style="width:800px; margin:0 auto;
+          transform:translateX(52px); padding-bottom:20px;">
+      <div class="line"></div>
+      <div style="display:inline-block;">
+        <h3 class="anim-text">IMAGE HIGHLIGHTS</h3>
+      </div>
+      <div class="line"></div>
+    </div>
+
     <section class="img-section" style="padding-top:0%;">
       <!-- <div class="line"></div> -->
-      <h2 class="text__h1 proj-subtitles" style="padding-top:0px;">highlights</h2>
+      <!-- <h2 class="text__h1 proj-subtitles" style="padding-top:0px;">highlights</h2> -->
       <!-- <div class="line"></div> -->
       <div class="media-list" style="box-shadow:none;">
         <div class="media-card-wrapper">
