--- a/sketches.html
+++ b/sketches.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Final Project for HTML5/CSS3 Course">
   <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <title>Shandira Ferguson | UI/UX Designer & Software Engineer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css"/>
@@ -13,7 +13,7 @@
   <script src="./assets/javascripts/jquery.min.js"></script>
   <script src="./assets/javascripts/lightbox.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/sketches-filter.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="./assets/stylesheets/sketches-filter.css" /> -->
   <script src="./assets/javascripts/sketches-filter.js"></script>
 </head>
 
@@ -55,7 +55,7 @@
 </div>
 
 <section class="filter-section">
-  <div class="container">
+  <div class="container--sketches">
     <div class="filter-div b&w">
       <img class="merch-img" src="./assets/images/sketches/motherslove-bw.png" />
     </div>
