--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Final Project for HTML5/CSS3 Course">
   <meta name="keywords" content="HTML,CSS,JavaScript,jQuery">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <title>Shandira Ferguson | UI/UX Designer & Software Engineer </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/styles.css"/>
@@ -21,7 +21,7 @@
         style="font-size:23px;">&#xf0e1;</a>
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
       <span class="email-text">shandira.ferguson@gmail.com</span></a>
-    <a class="link topnav__link" href="#pop-ups">pop-ups</a>
+    <a class="link topnav__link" href="popups.html">pop-ups</a>
     <a class="link topnav__link" href="sketches.html">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
     <a class="link topnav__link" href="projects.html">projects</a>
@@ -29,9 +29,9 @@
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
 
-  <section class="text container list--process">
+  <section class="text container--about list--process">
     <div class="col-xs-12">
-      <img class="avatar-image" src="assets/images/about/meImg.png"/>
+      <img class="avatar-image" id="about-img" src="assets/images/about/meImg.png"/>
       <h1 class="text__h1" style="padding-top:2px">about me</h1>
       <h2 class="text__h2">I'm a UI/UX Software Engineer
         from the beautiful islands of the Bahamas.</h2>
@@ -50,7 +50,7 @@
         </div>
       </section>
 
-      <section class="container">
+      <section class="container--about">
         <div class="container__sec col-xs-12">
           <div class="col-xs-12 col-md-4 list--process" style="box-shadow:none">
             <ul class="list list--coder text">
@@ -85,7 +85,7 @@
     </div>
   </section> -->
 
-  <section class="container">
+  <section class="container--about">
     <div class="col-xs-12 container__sec">
       <div class="list--process">
         <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
@@ -105,7 +105,7 @@
       </div>
     </section>
 
-    <section class="container">
+    <section class="container--about">
       <div class="container__sec col-xs-12 list--process">
         <h2 class="text__h2 list__title"> My Skills</h2>
         <img class="avatar-image level-img" src="assets/images/about/SkillsDiv.png"/>
@@ -119,7 +119,7 @@
           color: black;"><span class="fa copyright">&#xf1f9;</span> 2020 Shandira Ferguson <br> <span style="font-size:10px;
           font-weight:lighter; float:right">Inspired by Adham Dannaway</span></a>
           <div class="center-block">
-            <a class="link footer__link" href="#pop-ups">pop-ups</a>
+            <a class="link footer__link" href="popups.html">pop-ups</a>
             <a class="link footer__link" href="sketches.html">sketches</a>
             <a class="link footer__link" href="process.html">process</a>
             <a class="link footer__link" href="projects.html">projects</a>
