About page - mobile complete

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
         <div class="list--container list--process">
           <ul class="list__process" style="padding-top:50px; padding-left:3px">
-            <li class="text__h3 list__title">Random facts</li>
+            <li class="text__h3 list__title">Random Facts</li>
             <li class="list__elem">God is my everything <3 </li>
               <li class="list__elem">Dancing is my happy place</li>
               <li class="list__elem">I love to laugh and make others laugh</li>
@@ -107,8 +107,9 @@
 
     <section class="container--about">
       <div class="container__sec col-xs-12 list--process">
-        <h2 class="text__h2 list__title"> My Skills</h2>
+        <h2 class="text__h3 list__title"> My Skills</h2>
         <img class="avatar-image level-img" src="assets/images/about/SkillsDiv.png"/>
+          <img class="avatar-image level-img-2" style="display:none" src="assets/images/about/skills-chart-v2.webp"/>
       </div>
     </section>
 
