--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <img class="animated-gif" style="background-attachment:fixed;" src="./assets/videos/home/home-motherhood.gif">
   </div>
 
-  <div class="anim-text-block" style="width:800px; margin:0 auto;">
-    <div class="line"></div>
+  <div class="anim-text-block--home" style="width:800px; margin:0 auto;">
+    <div class="line--home"></div>
     <div style="display:inline-block;">
       <h3 class="anim-text">SOME OF MY ANIMATIONS</h3>
     </div>
-    <div class="line"></div>
+    <div class="line--home"></div>
   </div>
 
   <div class="media-list" style="padding: 0px 3%;">
