--- a/projects.html
+++ b/projects.html
@@ -55,13 +55,13 @@
       </div>
     </section>
 
-    <div class="anim-text-block" style="width:800px; margin:0 auto;
+    <div class="anim-text-block--projects" style="width:800px; margin:0 auto;
           transform:translateX(52px); padding-bottom:20px;">
-      <div class="line"></div>
+      <div class="line--projects"></div>
       <div style="display:inline-block;">
         <h3 class="anim-text">IMAGE HIGHLIGHTS</h3>
       </div>
-      <div class="line"></div>
+      <div class="line--projects"></div>
     </div>
 
     <section class="img-section" style="padding-top:0%;">
