Sketches mobile complete

--- a/popups.html
+++ b/popups.html
@@ -39,7 +39,7 @@
       </div>
     </section>
 
-    <div class="overview-popups">
+    <div class="overview-popups text__h2">
       <p>It's pop-up time! I've always wanted to meet every last one of you guys that's been rockin' with me from the beginning. It's
           definitely been a long journey! If you're new to this space, I welcome you! This table may change and new venues may be
           added but this is our start guys! Secure that spot! Can't wait to see you all there!
