--- a/sketches.html
+++ b/sketches.html
@@ -47,7 +47,7 @@
 </div>
 
 <section class="contents">
-<div class="overview">
+<div class="overview text__h2">
   <p>Welcome to my album of sketches that I've worked on over the years. Some for course assignments and others simply for fun.
     I'll be updating this page and adding more each time I get inspired — which will be quite often now that I have a bit more
     free time on my hands. In the meantime, feel free to browse through!
