Popups-mobile setup
Foundation

--- a/popups.html
+++ b/popups.html
@@ -41,8 +41,8 @@
 
     <div class="overview-popups text__h2">
       <p>It's pop-up time! I've always wanted to meet every last one of you guys that's been rockin' with me from the beginning. It's
-          definitely been a long journey! If you're new to this space, I welcome you! This table may change and new venues may be
-          added but this is our start guys! Secure that spot! Can't wait to see you all there!
+        definitely been a long journey! If you're new to this space, I welcome you! This table may change and new venues may be
+        added but this is our start guys! Secure that spot! Can't wait to see you all there!
       </p>
     </div>
 
@@ -126,6 +126,53 @@
           <td><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></td>
         </tr>
       </table>
+    </section>
+
+    <section class="contents--popups--mobile" style="display: none">
+      <div class="drk-grey-ul">
+        <ul>
+          <li><b>venue</b></li>
+          <li>venue</li>
+          <li><b>location</b></li>
+          <li>venue</li>
+          <li><b>date</b></li>
+          <li>venue</li>
+          <li><b>time</b></li>
+          <li>venue</li>
+          <li><b>ticket location</b></li>
+          <li>venue</li>
+        </ul>
+      </div>
+
+      <div class="lgt-grey-ul">
+        <ul>
+          <li><b>venue</b></li>
+          <li>venue</li>
+          <li><b>location</b></li>
+          <li>venue</li>
+          <li><b>date</b></li>
+          <li>venue</li>
+          <li><b>time</b></li>
+          <li>venue</li>
+          <li><b>ticket location</b></li>
+          <li>venue</li>
+        </ul>
+      </div>
+
+      <div class="drk-grey-ul">
+        <ul>
+          <li><b>venue</b></li>
+          <li>venue</li>
+          <li><b>location</b></li>
+          <li>venue</li>
+          <li><b>date</b></li>
+          <li>venue</li>
+          <li><b>time</b></li>
+          <li>venue</li>
+          <li><b>ticket location</b></li>
+          <li>venue</li>
+        </ul>
+      </div>
     </section>
 
     <section>
